# #############################################################################
# setup.cfg
# =========
# Author : Sepand KASHANI [kashani.sepand@gmail.com]
# #############################################################################

[metadata]
name = audio_tools
summary = Audio streaming library & tools. Provides easy-to-use tools to interface with real/virtual audio streams.
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Sepand KASHANI
author_email = kashani.sepand@gmail.com
license = BSD


[files]
packages =
    audio_tools


[options]
zip_safe = True
include_package_data = True
python_requires = >=3.4
install_requires =
    numpy >= 1.8.*

[options.extras_require]
dev =
    black
